Fixed internal server error by referring to correct wsgi.py in django app

--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -26,6 +26,6 @@ home=/Users/you/envs/env
 chdir = /home/docker/code/app/
 # load the module from wsgi.py, it is a python path from 
 # the directory above.
-module=livinglabserver.dev_wsgi:application
+module=livinglabserver.wsgi:application
 # allow anyone to connect to the socket. This is very permissive
 chmod-socket=666
