--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 *.pyc
 *.swp
 db.sqlite3
-provisioning/migrations/
-testresults/migrations/
-scripts/migrations/
+app/provisioning/migrations/
+app/testresults/migrations/
+app/scripts/migrations/
