--- a/nginx-app.conf
+++ b/nginx-app.conf
@@ -10,7 +10,7 @@ upstream django {
 server {
     # the port your site will be served on, default_server indicates that this server block
     # is the block to use if no blocks match the server_name
-    listen      *:80 default_server;
+    listen      127.0.0.1:80 default_server;
 
     # the domain name it will serve for
     server_name ""; # substitute your machine's IP address or FQDN
@@ -18,6 +18,14 @@ server {
 
     # max upload size
     client_max_body_size 75M;   # adjust to taste
+
+    # Django media
+#    location /media {
+#        alias /home/docker/persistent/media;
+
+    location /static {
+        alias /home/docker/code/app/static;
+    }
 
     # Finally, send all non-media requests to the Django server.
     location / {
