--- a/nginx-app.conf
+++ b/nginx-app.conf
@@ -1,8 +1,13 @@
 # nginx-app.conf
 
+error_log /home/adam/management/logs/error.log warn;
+access_log /home/adam/management/logs/access.log;
+
 # the upstream component nginx needs to connect to
 upstream django {
-    server unix:/home/docker/code/app.sock; # for a file socket
+    server unix:/home/adam/management/app.sock; # for a file socket
+    # server unix:/home/docker/code/app.sock; # for a file socket
+    # server 127.0.0.1:8001; # for a web port socket
     # server 127.0.0.1:8001; # for a web port socket
 }
 
@@ -24,12 +29,12 @@ server {
 #        alias /home/docker/persistent/media;
 
     location /static {
-        alias /home/docker/code/app/static;
+        alias /home/adam/management/app/static;
     }
 
     # Finally, send all non-media requests to the Django server.
     location / {
         uwsgi_pass  django;
-        include     /home/docker/code/uwsgi_params; # the uwsgi_params file you installed
+        include     /home/adam/management/uwsgi_params; # the uwsgi_params file you installed
     }
 }
