--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -4,7 +4,7 @@
 ini = :base
 
 # %d is the dir this configuration file is in
-socket = /home/docker/code/app.sock
+socket = /home/adam/management/app.sock
 master = true
 processes = 4
 
@@ -23,9 +23,11 @@ home=/Users/you/envs/env
 
 [base]
 # chdir to the folder of this config file, plus app/website
-chdir = /home/docker/code/app/
+chdir = /home/adam/management/app/
 # load the module from wsgi.py, it is a python path from 
 # the directory above.
 module=livinglabserver.wsgi:application
 # allow anyone to connect to the socket. This is very permissive
 chmod-socket=666
+# logging
+logto = /home/adam/management/logs/uwsgi.log
