--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -31,3 +31,4 @@ module=livinglabserver.wsgi:application
 chmod-socket=666
 # logging
 logto = /home/adam/management/logs/uwsgi.log
+plugins = python3
