--- a/deploy_management_server.yml
+++ b/deploy_management_server.yml
@@ -4,66 +4,79 @@
   tasks:
 
     - name: ensure git is on server
+      become: true
       apt:
         name: git
         state: present
 
     - name: ensure nginx is on server
+      become: true
       apt:
         name: nginx
         state: present
 
     - name: ensure sqlite3 is on server
+      become: true
       apt:
         name: sqlite3
         state: present
 
     - name: ensure python3 is on server
+      become: true
       apt:
         name: python3
         state: present
 
     - name: ensure python3-dev is on server
+      become: true
       apt:
         name: python3-dev
         state: present
 
     - name: ensure python3-setuptools is on server
+      become: true
       apt:
         name: python3-setuptools
         state: present
 
     - name: ensure pip3 is on server
+      become: true
       apt:
         name: python3-pip
         state: present
 
     - name: ensure uwsgi-plugin-python3 is on server
+      become: true
       apt:
         name: uwsgi-plugin-python3
         state: present
 
     - name: ensure uwsgi is installed
+      become: true
       pip:
         name: uwsgi
         executable: pip3
 
     - name: ensure django is installed
+      become: true
       pip:
         name: django
         executable: pip3
 
     - name: ensure djangorestframework is installed
+      become: true
       pip:
         name: djangorestframework
         executable: pip3
 
     - name: ensure markdown is installed
+      become: true
       pip:
         name: markdown
         executable: pip3
 
     - name: ensure django-filter is installed
+      become: true
       pip:
         name: django-filter
         executable: pip3
@@ -72,6 +85,7 @@
       git:
         repo: https://github.com/adamkpickering/living-lab-server.git
         dest: /home/adam/management/
+        force: true
 
     - name: ensure logs directory exists
       file:
