--- a/deploy_management_server.yml
+++ b/deploy_management_server.yml
@@ -3,83 +3,50 @@
   hosts: management
   tasks:
 
-    - name: ensure git is on server
+    - name: ensure apt packages are present
       become: true
       apt:
-        name: git
+        name: "{{ item }}"
         state: present
+      loop:
+        - git
+        - nginx
+        - sqlite3
+        - python3
+        - python3-dev
+        - python3-setuptools
+        - python3-pip
+        - uwsgi
+        - uwsgi-plugin-python3
 
-    - name: ensure nginx is on server
-      become: true
-      apt:
-        name: nginx
-        state: present
-
-    - name: ensure sqlite3 is on server
-      become: true
-      apt:
-        name: sqlite3
-        state: present
-
-    - name: ensure python3 is on server
-      become: true
-      apt:
-        name: python3
-        state: present
-
-    - name: ensure python3-dev is on server
-      become: true
-      apt:
-        name: python3-dev
-        state: present
-
-    - name: ensure python3-setuptools is on server
-      become: true
-      apt:
-        name: python3-setuptools
-        state: present
-
-    - name: ensure pip3 is on server
-      become: true
-      apt:
-        name: python3-pip
-        state: present
-
-    - name: ensure uwsgi is on server
-      become: true
-      apt:
-        name: uwsgi
-        state: present
-
-    - name: ensure uwsgi-plugin-python3 is on server
-      become: true
-      apt:
-        name: uwsgi-plugin-python3
-        state: present
-
-    - name: ensure django is installed
+    - name: ensure pip3 packages are present
       become: true
       pip:
-        name: django
+        name: "{{ item }}"
         executable: pip3
+      loop:
+        - django
+        - djangorestframework
+        - markdown
+        - django-filter
 
-    - name: ensure djangorestframework is installed
-      become: true
-      pip:
-        name: djangorestframework
-        executable: pip3
-
-    - name: ensure markdown is installed
-      become: true
-      pip:
-        name: markdown
-        executable: pip3
-
-    - name: ensure django-filter is installed
-      become: true
-      pip:
-        name: django-filter
-        executable: pip3
+  #    - name: ensure djangorestframework is installed
+  #      become: true
+  #      pip:
+  #        name: djangorestframework
+  #        executable: pip3
+  #
+  #    - name: ensure markdown is installed
+  #      become: true
+  #      pip:
+  #        name: markdown
+  #        executable: pip3
+  #
+  #    - name: ensure django-filter is installed
+  #      become: true
+  #      pip:
+  #        name: django-filter
+  #        executable: pip3
 
     - name: clone living-lab-server github repo
       git:
