--- a/install.yml
+++ b/install.yml
@@ -1,22 +1,80 @@
 ---
 - name: Base NanoPi Config
-  hosts: localhost
+  gather_facts: false
+  hosts: nanopis
   tasks:
 
-    - name: install pip3
-      become: yes
+    - name: ensure apt packages are present
+      become: true
       apt:
-        name: python3-pip
+        name: "{{ item }}"
         state: present
+      loop:
+        - python3
+        - python3-pip
+        - python3-dev
+        - python3-setuptools
+        - autossh
           
-    - name: install xkcdpass
-      become: yes
+    - name: ensure pip3 packages are present
+      become: true
       pip:
-        name: xkcdpass
+        name: "{{ item }}"
+        state: latest
         executable: pip3
+      loop:
+        - pip
+        - setuptools
+        - wheel
+        - xkcdpass
+        - requests
 
-    - name: install requests
-      become: yes
-      pip:
-        name: requests
-        executable: pip3
+    - name: ensure /home/nanopi/.ssh/ exists
+      file:
+        path: /home/nanopi/.ssh
+        state: directory
+        mode: 0700
+
+    - name: put the server's key in authorized_keys
+      copy:
+        src: /home/adam/.ssh/server_keys/id_rsa.pub
+        dest: /home/nanopi/.ssh/authorized_keys
+        mode: 0600
+
+    - name: copy client public key to nanopi
+      copy:
+        src: /home/adam/.ssh/id_rsa.pub
+        dest: /home/nanopi/.ssh/id_rsa.pub
+        mode: 0644
+
+    - name: copy client private key to nanopi
+      copy:
+        src: /home/adam/.ssh/id_rsa
+        dest: /home/nanopi/.ssh/id_rsa
+        mode: 0600
+
+    - name: copy known_hosts to nanopi
+      copy:
+        src: known_hosts
+        dest: /home/nanopi/.ssh/known_hosts
+        mode: 0600
+
+    - name: copy local service to systemd directory
+      become: true
+      template:
+        src: local-tunnel.service
+        dest: /etc/systemd/system/local-tunnel.service
+
+    - name: enable and start local tunnel
+      become: true
+      systemd:
+        name: local-tunnel
+        enabled: true
+        state: restarted
+        daemon_reload: true
+
+    # **** must restart in order for the changes to take effect ****
+
+  #    - name: run the script
+  #      script: test.py
+  #      register: test_variable
