--- a/remote-tunnel.service
+++ b/remote-tunnel.service
@@ -1,12 +1,13 @@
 [Unit]
-Description=AutoSSH remote tunnel
+Description=SSH remote tunnel
 ConditionPathExists=|/usr/bin
-After=network.target
+After=network-online.target
+Wants=network-online.target
 
 [Service]
 Environment="AUTOSSH_GATETIME=0"
 User=nanopi
-ExecStart=/usr/bin/ssh -TN -o ServerAliveInterval=30 -o ServerAliveCountMax=3 -p 22 -i /home/nanopi/.ssh/id_rsa -R localhost:{{ provision_result.stdout_lines[0] }}:localhost:22 adam@{{ management_server }}
+ExecStart=/usr/bin/ssh -TN -o ExitOnForwardFailure=yes -o ServerAliveInterval=30 -o ServerAliveCountMax=3 -p 22 -i /home/nanopi/.ssh/id_rsa -R localhost:{{ provision_result.stdout_lines[0] }}:localhost:22 adam@{{ management_server }}
 RestartSec=3
 Restart=always
 
