Renamed install.yml to deploy.yml and scheduler.py to schedule.py

--- a/deploy.yml
+++ b/deploy.yml
@@ -1,5 +1,5 @@
 ---
-- name: Base NanoPi Config
+- name: base nanopi config (ssh tunnels and provisioning with server)
   gather_facts: false
   hosts: nanopis
   handlers:
