--- a/scheduled-testing.service
+++ b/scheduled-testing.service
@@ -4,7 +4,15 @@ After=network.target
 
 [Service]
 User=nanopi
-ExecStart=/usr/bin/python3 -u /home/nanopi/schedule.py {{ test_host }} {{ iperf_port }} {{ management_host }} {{ management_port }} {{ info_path }} {{ ping_result_path }} {{ intense_result_path }} {{ test_time.stdout_lines[0] }}
+Environment="TEST_HOST={{ test_host }}"
+Environment="IPERF_PORT={{ iperf_port }}"
+Environment="MANAGEMENT_HOST={{ management_host }}"
+Environment="MANAGEMENT_PORT={{ management_port }}"
+Environment="INFO_PATH={{ info_path }}"
+Environment="PING_RESULT_PATH={{ ping_result_path }}"
+Environment="INTENSE_RESULT_PATH={{ intense_result_path }}"
+Environment="INTENSE_TEST_MINUTE={{ test_time.stdout_lines[0] }}"
+ExecStart=/usr/bin/python3 -u /home/nanopi/schedule.py $TEST_HOST $IPERF_PORT $MANAGEMENT_HOST $MANAGEMENT_PORT $INFO_PATH $PING_RESULT_PATH $INTENSE_RESULT_PATH $INTENSE_TEST_MINUTE
 RestartSec=3
 Restart=always
 
