Switched around some variable names so that they make more sense

--- a/deploy.yml
+++ b/deploy.yml
@@ -92,7 +92,9 @@
         - shutdown nanopi
 
     - name: provision nanopi
-      script: "provision_nanopi.py {{ admin_user }} {{ admin_pass }} localhost 5000" 
+      script: >
+        provision_nanopi.py {{ admin_user }} {{ admin_pass }}
+        {{ management_host }} {{ management_port }} {{ nanopi_provisioning_path }}
       register: provision_result
 
     - name: ensure proper permissions are set for /home/nanopi/info file
