--- a/remote-tunnel.service
+++ b/remote-tunnel.service
@@ -7,7 +7,7 @@ Wants=network-online.target
 [Service]
 Environment="AUTOSSH_GATETIME=0"
 User=nanopi
-ExecStart=/usr/bin/ssh -TN -o ExitOnForwardFailure=yes -o ServerAliveInterval=30 -o ServerAliveCountMax=3 -p 22 -i /home/nanopi/.ssh/id_rsa -R localhost:{{ provision_result.stdout_lines[0] }}:localhost:22 adam@{{ management_server }}
+ExecStart=/usr/bin/ssh -TN -o ExitOnForwardFailure=yes -o ServerAliveInterval=30 -o ServerAliveCountMax=3 -p 22 -i /home/nanopi/.ssh/id_rsa -R localhost:{{ provision_result.stdout_lines[0] }}:localhost:22 adam@{{ management_host }}
 RestartSec=3
 Restart=always
 
