--- a/scheduled-testing.service
+++ b/scheduled-testing.service
@@ -6,13 +6,13 @@ After=network.target
 User=nanopi
 Environment="TEST_HOST={{ test_host }}"
 Environment="IPERF_PORT={{ iperf_port }}"
-Environment="MANAGEMENT_HOST={{ management_host }}"
-Environment="MANAGEMENT_PORT={{ management_port }}"
+Environment="MANAGEMENT_HOST_TUNNEL={{ management_host_tunnel }}"
+Environment="MANAGEMENT_PORT_TUNNEL={{ management_port_tunnel }}"
 Environment="INFO_PATH={{ info_path }}"
 Environment="PING_RESULT_PATH={{ ping_result_path }}"
 Environment="INTENSE_RESULT_PATH={{ intense_result_path }}"
 Environment="INTENSE_TEST_MINUTE={{ test_time.stdout_lines[0] }}"
-ExecStart=/usr/bin/python3 -u /home/nanopi/schedule.py $TEST_HOST $IPERF_PORT $MANAGEMENT_HOST $MANAGEMENT_PORT $INFO_PATH $PING_RESULT_PATH $INTENSE_RESULT_PATH $INTENSE_TEST_MINUTE
+ExecStart=/usr/bin/python3 -u /home/nanopi/schedule.py $TEST_HOST $IPERF_PORT $MANAGEMENT_HOST_TUNNEL $MANAGEMENT_PORT_TUNNEL $INFO_PATH $PING_RESULT_PATH $INTENSE_RESULT_PATH $INTENSE_TEST_MINUTE
 RestartSec=3
 Restart=always
 
