--- a/vars.yml
+++ b/vars.yml
@@ -1,10 +1,12 @@
 ---
-test_host:
-iperf_port:
-management_host:
-management_port:
-info_path:
-ping_result_path:
-intense_result_path:
-admin_user:
-admin_pass:
+test_host: 
+iperf_port: 
+management_host: 
+management_host_tunnel: 
+management_port_tunnel: 
+info_path: 
+ping_result_path: 
+intense_result_path: 
+nanopi_provisioning_path: 
+admin_user: 
+admin_pass: 
