--- a/scheduled-testing.service
+++ b/scheduled-testing.service
@@ -4,15 +4,7 @@ After=network.target
 
 [Service]
 User=nanopi
-Environment="TEST_HOST={{ test_host }}"
-Environment="IPERF_PORT={{ iperf_port }}"
-Environment="MANAGEMENT_HOST_TUNNEL={{ management_host_tunnel }}"
-Environment="MANAGEMENT_PORT_TUNNEL={{ management_port_tunnel }}"
-Environment="INFO_PATH={{ info_path }}"
-Environment="PING_RESULT_PATH={{ ping_result_path }}"
-Environment="INTENSE_RESULT_PATH={{ intense_result_path }}"
-Environment="INTENSE_TEST_MINUTE={{ test_time.stdout_lines[0] }}"
-ExecStart=/usr/bin/python3 -u /home/nanopi/schedule.py $TEST_HOST $IPERF_PORT $MANAGEMENT_HOST_TUNNEL $MANAGEMENT_PORT_TUNNEL $INFO_PATH $PING_RESULT_PATH $INTENSE_RESULT_PATH $INTENSE_TEST_MINUTE
+ExecStart=/usr/bin/python3 -u /home/nanopi/schedule.py {{ test_host }} {{ iperf_port }} {{ sockperf_port }} {{ management_host_tunnel }} {{ management_port_tunnel }} {{ info_path }} {{ ping_result_path }} {{ iperf3_result_path }} {{ sockperf_result_path }} {{ test_time.stdout_lines[0] }}
 RestartSec=3
 Restart=always
 
