--- a/vars.yml
+++ b/vars.yml
@@ -1,12 +1,15 @@
 ---
+management_host: 
+nanopi_provisioning_path: 
+admin_user: 
+admin_pass: 
+
 test_host: 
 iperf_port: 
-management_host: 
+sockperf_port: 
 management_host_tunnel: 
 management_port_tunnel: 
 info_path: 
 ping_result_path: 
-intense_result_path: 
-nanopi_provisioning_path: 
-admin_user: 
-admin_pass: 
+iperf3_result_path: 
+sockperf_result_path: 
