Substituted {{ ansible_user }} for 'adam' in all places that made sense in management role

--- a/roles/management/templates/uwsgi.ini
+++ b/roles/management/templates/uwsgi.ini
@@ -4,7 +4,7 @@
 ini = :base
 
 # %d is the dir this configuration file is in
-socket = /home/adam/management/app.sock
+socket = /home/{{ ansible_user }}/management/app.sock
 master = true
 processes = 4
 
@@ -23,12 +23,12 @@ home=/Users/you/envs/env
 
 [base]
 # chdir to the folder of this config file, plus app/website
-chdir = /home/adam/management/app/
+chdir = /home/{{ ansible_user }}/management/app/
 # load the module from wsgi.py, it is a python path from 
 # the directory above.
 module=livinglabserver.wsgi:application
 # allow anyone to connect to the socket. This is very permissive
 chmod-socket=666
 # logging
-logto = /home/adam/management/logs/uwsgi.log
+logto = /home/{{ ansible_user }}/management/logs/uwsgi.log
 plugins = python3
