Switched to synchronizing API with it's destination directory, rather than cloning it; also switched to copying uwsgi.service and nginx-app.conf directly to their respective directories, rather than symlinking them

--- a/roles/management/tasks/install.yml
+++ b/roles/management/tasks/install.yml
@@ -15,6 +15,7 @@
         - python3-pip
         - uwsgi
         - uwsgi-plugin-python3
+        - rsync
 
     - name: ensure pip3 packages are present
       become: true
