--- a/roles/endpoint/tasks/other.yml
+++ b/roles/endpoint/tasks/other.yml
@@ -50,6 +50,7 @@
   script: >
     provision_nanopi.py {{ admin_user }} {{ admin_pass }}
     {{ management_host_tunnel }} {{ management_port_tunnel }} {{ nanopi_provisioning_path }}
+    {{ info_path }}
   register: provision_result
 
 - name: ensure proper permissions are set for /home/nanopi/info file
