--- a/roles/endpoint/tasks/other.yml
+++ b/roles/endpoint/tasks/other.yml
@@ -1,32 +1,32 @@
 ---
-- name: ensure /home/nanopi/.ssh/ exists
+- name: ensure /home/{{ ansible_user }}/.ssh/ exists
   file:
-    path: /home/nanopi/.ssh
+    path: /home/{{ ansible_user }}/.ssh
     state: directory
     mode: 0700
 
 - name: put the server's key in authorized_keys
   copy:
-    src: /home/adam/.ssh/server_keys/id_rsa.pub
-    dest: /home/nanopi/.ssh/authorized_keys
+    src: "{{ hostvars['management']['ssh_public_key_src'] }}"
+    dest: /home/{{ ansible_user }}/.ssh/authorized_keys
     mode: 0600
 
 - name: copy client public key to nanopi
   copy:
-    src: /home/adam/.ssh/id_rsa.pub
-    dest: /home/nanopi/.ssh/id_rsa.pub
+    src: "{{ ssh_public_key_src }}"
+    dest: /home/{{ ansible_user }}/.ssh/id_rsa.pub
     mode: 0644
 
 - name: copy client private key to nanopi
   copy:
-    src: /home/adam/.ssh/id_rsa
-    dest: /home/nanopi/.ssh/id_rsa
+    src: "{{ ssh_private_key_src }}"
+    dest: /home/{{ ansible_user }}/.ssh/id_rsa
     mode: 0600
 
 - name: copy known_hosts to nanopi
   copy:
     src: known_hosts
-    dest: /home/nanopi/.ssh/known_hosts
+    dest: /home/{{ ansible_user }}/.ssh/known_hosts
     mode: 0600
 
 - name: copy local-tunnel.service to systemd directory
@@ -55,7 +55,7 @@
 
 - name: ensure proper permissions are set for /home/nanopi/info file
   file:
-    path: /home/nanopi/info
+    path: "{{ info_path }}"
     state: file
     mode: 0600
 
