A few minor improvements, also removed the ability to change the hostname of the management server API, since it never was really changeable from 'localhost' from the beginning

--- a/roles/endpoint/templates/local-tunnel.service
+++ b/roles/endpoint/templates/local-tunnel.service
@@ -4,8 +4,8 @@ ConditionPathExists=|/usr/bin
 After=network.target
 
 [Service]
-User=nanopi
-ExecStart=/usr/bin/ssh -TN -o ExitOnForwardFailure=yes -o ServerAliveInterval=30 -o ServerAliveCountMax=3 -p 22 -i /home/{{ ansible_user }}/.ssh/id_rsa -L {{ management_host_tunnel }}:{{ management_port_tunnel }}:{{ hostvars['management']['management_host'] }}:{{ hostvars['management']['management_port'] }} {{ hostvars['management']['ansible_user'] }}@{{ hostvars['management']['ansible_host'] }}
+User={{ ansible_user }}
+ExecStart=/usr/bin/ssh -TN -o ExitOnForwardFailure=yes -o ServerAliveInterval=30 -o ServerAliveCountMax=3 -p 22 -i /home/{{ ansible_user }}/.ssh/id_rsa -L {{ management_host_tunnel }}:{{ management_port_tunnel }}:localhost:{{ hostvars['management']['management_port'] }} {{ hostvars['management']['ansible_user'] }}@{{ hostvars['management']['ansible_host'] }}
 RestartSec=3
 Restart=always
 
