--- a/roles/management/tasks/backup.yml
+++ b/roles/management/tasks/backup.yml
@@ -3,7 +3,8 @@
     path: /home/{{ ansible_user }}/backup/
     state: directory
 
-- cron:
+- name: set up cron job for nightly backup
+  cron:
     name: local db backup
     hour: 6 # in UTC ideally
     job: rsync /home/{{ ansible_user }}/management/app/db.sqlite3 /home/{{ ansible_user }}/backup/db.sqlite3
