--- a/roles/endpoint/templates/remote-tunnel.service
+++ b/roles/endpoint/templates/remote-tunnel.service
@@ -5,7 +5,7 @@ After=network-online.target
 Wants=network-online.target
 
 [Service]
-User=nanopi
+User={{ ansible_user }}
 ExecStart=/usr/bin/ssh -TN -o ExitOnForwardFailure=yes -o ServerAliveInterval=30 -o ServerAliveCountMax=3 -p 22 -i /home/{{ ansible_user }}/.ssh/id_rsa -R localhost:{{ provision_result.stdout_lines[0] }}:localhost:22 {{ hostvars['management']['ansible_user'] }}@{{ hostvars['management']['ansible_host'] }}
 RestartSec=3
 Restart=always
